feat(auth): enhance authentication flow with error handling and localization
- Update .env file with new Sharetribe SDK credentials.
- Add localized authentication messages in en.json for login and signup processes.
- Refactor Login and Signup components to display error messages based on authentication state.
- Introduce selectors for login and signup error handling in auth.slice.ts.
- Implement error display in Login and Signup forms to improve user feedback.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,1 +1,11 @@
-{}
+{
+  "Authentication": {
+    "dontHaveAnAccount": "Don't have an account?",
+    "haveAnAccount": "Have an account?",
+    "signup": "Sign up",
+    "login": "Log in",
+    "loginFailed": "The email and password you provided don't match our records. Please double-check and try again.",
+    "signupFailed": "Signup failed. Please make sure all the information you entered is correct and try again.",
+    "signupFailedEmailAlreadyTaken": "An account with this email address already exists. Try logging in instead."
+  }
+}
