--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -7,5 +7,33 @@
     "loginFailed": "The email and password you provided don't match our records. Please double-check and try again.",
     "signupFailed": "Signup failed. Please make sure all the information you entered is correct and try again.",
     "signupFailedEmailAlreadyTaken": "An account with this email address already exists. Try logging in instead."
+  },
+  "EditListingAvailabilityPanel": {
+    "title": "Edit the availability of {listingTitle}",
+    "createListingTitle": "Availability"
+  },
+  "EditListingDetailsPanel": {
+    "title": "Edit the details of {listingTitle}",
+    "createListingTitle": "Listing details"
+  },
+  "EditListingLocationPanel": {
+    "title": "Edit the location of {listingTitle}",
+    "createListingTitle": "Location"
+  },
+  "EditListingPricingPanel": {
+    "title": "Edit the pricing of {listingTitle}",
+    "createListingTitle": "Pricing"
+  },
+  "EditListingPricingAndStockPanel": {
+    "title": "Pricing & stock of {listingTitle}",
+    "createListingTitle": "Pricing & stock"
+  },
+  "EditListingPhotosPanel": {
+    "title": "Edit the photos of {listingTitle}",
+    "createListingTitle": "Photos"
+  },
+  "EditListingDeliveryPanel": {
+    "title": "Edit the delivery options of {listingTitle}",
+    "createListingTitle": "Delivery options"
   }
 }
